--- a/lib/proj.win32/cocos2dx_2012.vcxproj
+++ b/lib/proj.win32/cocos2dx_2012.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="..\cocos2d-x\cocos2dx\platform\CCSAXParser.cpp" />
     <ClCompile Include="..\cocos2d-x\cocos2dx\platform\CCThread.cpp" />
     <ClCompile Include="..\cocos2d-x\cocos2dx\platform\CCZipFile.cpp" />
+    <ClCompile Include="..\cocos2d-x\cocos2dx\platform\HelperFunc.cpp" />
     <ClCompile Include="..\cocos2d-x\cocos2dx\platform\platform.cpp" />
     <ClCompile Include="..\cocos2d-x\cocos2dx\platform\win32\CCAccelerometer.cpp" />
     <ClCompile Include="..\cocos2d-x\cocos2dx\platform\win32\CCApplication.cpp" />
@@ -497,6 +498,7 @@
     <ClInclude Include="..\cocos2d-x\cocos2dx\platform\CCSAXParser.h" />
     <ClInclude Include="..\cocos2d-x\cocos2dx\platform\CCThread.h" />
     <ClInclude Include="..\cocos2d-x\cocos2dx\platform\CCZipFile.h" />
+    <ClInclude Include="..\cocos2d-x\cocos2dx\platform\HelperFunc.h" />
     <ClInclude Include="..\cocos2d-x\cocos2dx\platform\platform.h" />
     <ClInclude Include="..\cocos2d-x\cocos2dx\platform\third_party\win32\curl\curl.h" />
     <ClInclude Include="..\cocos2d-x\cocos2dx\platform\third_party\win32\curl\curlbuild.h" />
@@ -809,7 +811,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110_xp</PlatformToolset>
+    <PlatformToolset>v110</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
