--- a/lib/proj.win32/cocos2dx_2012.vcxproj.filters
+++ b/lib/proj.win32/cocos2dx_2012.vcxproj.filters
@@ -1212,6 +1212,9 @@
     <ClCompile Include="..\cocos2d-x\scripting\lua\lua_extensions\debugger\debugger.c">
       <Filter>cocos2d-x\scripting\lua\lua_extensions\debugger</Filter>
     </ClCompile>
+    <ClCompile Include="..\cocos2d-x\cocos2dx\platform\HelperFunc.cpp">
+      <Filter>cocos2d-x\cocos2dx\platform</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\cocos2d-x\scripting\lua\cocos2dx_support\CCLuaEngine.h">
@@ -2413,6 +2416,9 @@
     </ClInclude>
     <ClInclude Include="..\cocos2d-x\scripting\lua\lua_extensions\debugger\debugger.h">
       <Filter>cocos2d-x\scripting\lua\lua_extensions\debugger</Filter>
+    </ClInclude>
+    <ClInclude Include="..\cocos2d-x\cocos2dx\platform\HelperFunc.h">
+      <Filter>cocos2d-x\cocos2dx\platform</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
